tests/macros/expand/extension.stderr
error: option `extension` does not exist for kind `expand`
 --> $DIR/extension.rs:2:46
  |
2 |     let q = inquisition::questions![Expand { extension: todo!() }];
  |                                              ^^^^^^^^^
