tests/macros/expand/extension.rs
fn main() {
    let q = inquisition::questions![Expand { extension: todo!() }];
}
